--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,8 @@
 #For debhelper debugging
 #export DH_VERBOSE=1
 
+export DPKG_GENSYMBOLS_CHECK_LEVEL=4
+
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 #always exclude any data from version control systems
