update Vcs fields in debian/control

--- a/debian/control
+++ b/debian/control
@@ -20,8 +20,8 @@ Build-Depends: debhelper (>= 10),
                valac (>= 0.22),
                dbus
 Standards-Version: 4.2.1
-Vcs-Git: https://salsa.debian.org/cyphermox-guest/modemmanager.git
-Vcs-Browser: https://salsa.debian.org/cyphermox-guest/modemmanager
+Vcs-Git: https://salsa.debian.org/debian/modemmanager.git
+Vcs-Browser: https://salsa.debian.org/debian/modemmanager
 Homepage: https://www.freedesktop.org/wiki/Software/ModemManager/
 
 Package: modemmanager
