--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: modemmanager
 Section: net
 Priority: optional
 Maintainer: Mathieu Trudel-Lapierre <mathieu.tl@gmail.com>
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper-compat (= 10),
                automake,
                libtool,
                intltool,
