--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Build-Depends: debhelper-compat (= 10),
                libgudev-1.0-dev (>= 147),
                libsystemd-dev (>= 209),
                libpolkit-gobject-1-dev (>= 0.97),
-               libqmi-glib-dev (>= 1.25.900),
-               libmbim-glib-dev (>= 1.23.900),
+               libqmi-glib-dev (>= 1.26.0~),
+               libmbim-glib-dev (>= 1.24.0~),
                libglib2.0-doc,
                valac (>= 0.22),
                dbus
