Fix missing dependency on policykit-1 (Closes: #991223).
Without it, a lot of operations would result in the following error at
the D-Bus level:

    The name org.freedesktop.PolicyKit1 was not provided by any .service files

In bullseye, ModemManager.service wouldn't even start, because of the
missing polkit.service dependency at the systemd level.

--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Package: modemmanager
 Architecture: linux-any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         policykit-1,
 Recommends: usb-modeswitch
 Description: D-Bus service for managing modems
  ModemManager is a DBus-activated daemon which controls mobile broadband
