d/control: update build dependencies
Upstream bumped the required version for glib, libgudev, libmbim and
libqmi.

--- a/debian/control
+++ b/debian/control
@@ -14,12 +14,12 @@ Build-Depends: debhelper-compat (= 13),
                gnome-common,
                gobject-introspection,
                libgirepository1.0-dev,
-               libglib2.0-dev (>= 2.36.0),
-               libgudev-1.0-dev (>= 147),
+               libglib2.0-dev (>= 2.56.0),
+               libgudev-1.0-dev (>= 232),
                libsystemd-dev (>= 209),
                libpolkit-gobject-1-dev (>= 0.97),
-               libqmi-glib-dev (>= 1.28.6~),
-               libmbim-glib-dev (>= 1.24.0~),
+               libqmi-glib-dev (>= 1.30.2),
+               libmbim-glib-dev (>= 1.26.0),
                libglib2.0-doc,
                python3-dbus,
                python3-gi,
