d/rules: set with-polkit to permissive
Allow local users to unlock the SIM without being prompted for privileged credentials.
This behavior is currently implemented in Fedora and Arch Linux packaging of MM.

Closes: #800598

--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,7 @@ override_dh_auto_clean:
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--enable-gtk-doc \
-		--with-polkit=strict \
+		--with-polkit=permissive \
 		--enable-more-warnings \
 		--with-suspend-resume=systemd \
 		--with-systemdsystemunitdir=/lib/systemd/system
