--- a/debian/control
+++ b/debian/control
@@ -38,7 +38,7 @@ Depends: ${shlibs:Depends},
 Recommends: usb-modeswitch
 Description: D-Bus service for managing modems
  ModemManager is a DBus-activated daemon which controls mobile broadband
- (2G/3G/4G) devices and connections. Whether built-in devices, USB dongles,
+ (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
  Bluetooth-paired telephones or professional RS232/USB devices with external
  power supplies, ModemManager is able to prepare and configure the modems and
  setup connections with them.
@@ -53,7 +53,7 @@ Breaks: modemmanager (<< 1.6.6-1)
 Replaces: modemmanager (<< 1.6.6-1)
 Description: D-Bus service for managing modems - development files
  ModemManager is a DBus-activated daemon which controls mobile broadband
- (2G/3G/4G) devices and connections. Whether built-in devices, USB dongles,
+ (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
  Bluetooth-paired telephones or professional RS232/USB devices with external
  power supplies, ModemManager is able to prepare and configure the modems and
  setup connections with them.
@@ -68,7 +68,7 @@ Depends: ${misc:Depends}
 Suggests: devhelp
 Description: D-Bus service for managing modems - documentation files
  ModemManager is a DBus-activated daemon which controls mobile broadband
- (2G/3G/4G) devices and connections. Whether built-in devices, USB dongles,
+ (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
  Bluetooth-paired telephones or professional RS232/USB devices with external
  power supplies, ModemManager is able to prepare and configure the modems and
  setup connections with them.
@@ -86,7 +86,7 @@ Depends: ${shlibs:Depends},
 Recommends: modemmanager (>= ${binary:Version})
 Description: D-Bus service for managing modems - shared libraries
  ModemManager is a DBus-activated daemon which controls mobile broadband
- (2G/3G/4G) devices and connections. Whether built-in devices, USB dongles,
+ (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
  Bluetooth-paired telephones or professional RS232/USB devices with external
  power supplies, ModemManager is able to prepare and configure the modems and
  setup connections with them.
@@ -106,7 +106,7 @@ Depends: libmm-glib0 (= ${binary:Version}),
 Suggests: libmm-glib-doc
 Description: D-Bus service for managing modems - library development files
  ModemManager is a DBus-activated daemon which controls mobile broadband
- (2G/3G/4G) devices and connections. Whether built-in devices, USB dongles,
+ (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
  Bluetooth-paired telephones or professional RS232/USB devices with external
  power supplies, ModemManager is able to prepare and configure the modems and
  setup connections with them.
@@ -122,7 +122,7 @@ Depends: ${misc:Depends}
 Suggests: devhelp
 Description: D-Bus service for managing modems - library documentation
  ModemManager is a DBus-activated daemon which controls mobile broadband
- (2G/3G/4G) devices and connections. Whether built-in devices, USB dongles,
+ (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
  Bluetooth-paired telephones or professional RS232/USB devices with external
  power supplies, ModemManager is able to prepare and configure the modems and
  setup connections with them.
@@ -139,7 +139,7 @@ Depends: ${gir:Depends},
          ${misc:Depends}
 Description: GObject introspection data for modemmanager
  ModemManager is a DBus-activated daemon which controls mobile broadband
- (2G/3G/4G) devices and connections. Whether built-in devices, USB dongles,
+ (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
  Bluetooth-paired telephones or professional RS232/USB devices with external
  power supplies, ModemManager is able to prepare and configure the modems and
  setup connections with them.
