d/control: sort build dependencies
Also avoid installing unnecessary dependencies when using the `nodoc`
build profile.

--- a/debian/control
+++ b/debian/control
@@ -8,23 +8,24 @@ Uploaders: Arnaud Ferraris <arnaud.ferraris@gmail.com>,
            Martin <debacle@debian.org>
 Build-Depends: debhelper-compat (= 13),
                automake,
-               libtool,
-               intltool,
-               gtk-doc-tools,
+               dbus <!nocheck>,
                gnome-common,
                gobject-introspection,
+               intltool,
+               libtool,
                libgirepository1.0-dev,
                libglib2.0-dev (>= 2.56.0),
                libgudev-1.0-dev (>= 232),
-               libsystemd-dev (>= 209),
+               libmbim-glib-dev (>= 1.26.0),
                libpolkit-gobject-1-dev (>= 0.97),
                libqmi-glib-dev (>= 1.30.2),
-               libmbim-glib-dev (>= 1.26.0),
-               libglib2.0-doc,
+               libsystemd-dev (>= 209),
                python3-dbus,
                python3-gi,
                valac (>= 0.22),
-               dbus <!nocheck>,
+# Needed for building documentation
+               gtk-doc-tools <!nodoc>,
+               libglib2.0-doc <!nodoc>,
 Standards-Version: 4.6.0
 Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/DebianOnMobile-team/modemmanager.git
