d/control: drop build dependency on libqrtr-glib
`libqrtr-glib-dev` is now a dependency to `libqmi-glib-dev`, and as such
can be safely omitted from this package's build deps.

We must however increase the required `libqmi` version to ensure we
avoid build failures.

--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,7 @@ Build-Depends: debhelper-compat (= 13),
                libgudev-1.0-dev (>= 232),
                libmbim-glib-dev (>= 1.26.0),
                libpolkit-gobject-1-dev (>= 0.97),
-               libqmi-glib-dev (>= 1.30.2),
-               libqrtr-glib-dev (>= 1.0.0),
+               libqmi-glib-dev (>= 1.30.6~),
                libsystemd-dev (>= 209),
                python3-dbus,
                python3-gi,
