--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,8 @@ override_dh_auto_configure:
 		--with-polkit=permissive \
 		--enable-more-warnings \
 		--with-suspend-resume=systemd \
-		--with-systemdsystemunitdir=/lib/systemd/system
+		--with-systemdsystemunitdir=/lib/systemd/system \
+		--disable-Werror
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='modemmanager-dbg (<< 1.4.14-1~)'
