Add SIM A7600E-H support
- add UDEV rules for SIM A7600E-H
- add SIM card switching using libgpiod.
  Add ID_MM_SIM_SWITCH_GPIO_LABEL UDEV parameter for GPIO controlling external SIM switching
- set all +CRSM response timeouts to 20s
- ignore PB DONE, SMS DONE, +NITZ: URCs
- ignore NO CARRIER after AT+CFUN=0 command
- ignore +CPIN: READY URC on startup
- implement reset
- fix supported ip families request

--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -3082,7 +3082,7 @@ TEST_COMMON_LIBADD_FLAGS = \
 @ENABLE_PLUGIN_SIMTECH_TRUE@	$(NULL)
 
 @ENABLE_PLUGIN_SIMTECH_TRUE@libmm_plugin_simtech_la_LDFLAGS = $(PLUGIN_COMMON_LINKER_FLAGS)
-@ENABLE_PLUGIN_SIMTECH_TRUE@libmm_plugin_simtech_la_LIBADD = $(builddir)/libhelpers-simtech.la
+@ENABLE_PLUGIN_SIMTECH_TRUE@libmm_plugin_simtech_la_LIBADD = $(builddir)/libhelpers-simtech.la -lgpiod
 @ENABLE_PLUGIN_TELIT_TRUE@libmm_plugin_telit_la_SOURCES = \
 @ENABLE_PLUGIN_TELIT_TRUE@	telit/mm-plugin-telit.c \
 @ENABLE_PLUGIN_TELIT_TRUE@	telit/mm-plugin-telit.h \
