--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Build-Depends: debhelper-compat (= 13),
                python3-dbus,
                python3-gi,
                valac (>= 0.22),
+               libgpiod-dev,
 # Needed for building documentation
                gtk-doc-tools <!nodoc>,
                libglib2.0-doc <!nodoc>,
