Add SIM A7600E-H support
- add UDEV rules for SIM A7600E-H
- add SIM card switching using libgpiod.
  Add ID_MM_SIM_SWITCH_GPIO_LABEL UDEV parameter for GPIO controlling external SIM switching
- set all +CRSM response timeouts to 20s
- ignore PB DONE, SMS DONE, +NITZ: URCs
- ignore NO CARRIER after AT+CFUN=0 command
- ignore +CPIN: READY URC on startup
- implement reset
- fix supported ip families request

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1423,7 +1423,7 @@ libmm_plugin_simtech_la_CPPFLAGS = \
 	-DMM_MODULE_NAME=\"simtech\" \
 	$(NULL)
 libmm_plugin_simtech_la_LDFLAGS = $(PLUGIN_COMMON_LINKER_FLAGS)
-libmm_plugin_simtech_la_LIBADD = $(builddir)/libhelpers-simtech.la
+libmm_plugin_simtech_la_LIBADD = $(builddir)/libhelpers-simtech.la -lgpiod
 
 dist_udevrules_DATA += simtech/77-mm-simtech-port-types.rules
 
