modemmanager: Recommend libqmi-utils and libmbim-utils
The FCC unlock scripts shipped in modemmanager use `qmicli` to
perform unlocking which is part of the `libqmi-utils` package.

Additionally `mbimcli` is used by the `leac` script,
so recommend libmbim-utils as well.

Closes: #1017975 (thanks to Ilja Sidoroff)

--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,9 @@ Architecture: linux-any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          policykit-1,
-Recommends: usb-modeswitch
+Recommends: libmbim-utils,
+            libqmi-utils,
+            usb-modeswitch,
 Description: D-Bus service for managing modems
  ModemManager is a DBus-activated daemon which controls mobile broadband
  (2G/3G/4G/5G) devices and connections. Whether built-in devices, USB dongles,
