--- a/debian/control
+++ b/debian/control
@@ -7,25 +7,30 @@ Uploaders: Arnaud Ferraris <aferraris@debian.org>,
            Henry-Nicolas Tourneur <debian@nilux.be>,
            Martin <debacle@debian.org>
 Build-Depends: debhelper-compat (= 13),
-               automake,
-               dbus <!nocheck>,
+               bash-completion,
                gnome-common,
                gobject-introspection,
                intltool,
-               libtool,
+               libdbus-1-dev,
                libgirepository1.0-dev,
-               libglib2.0-dev (>= 2.56.0),
-               libgudev-1.0-dev (>= 232),
-               libmbim-glib-dev (>= 1.26.0),
+               libglib2.0-dev,
+               libgudev-1.0-dev,
+               libmbim-glib-dev (>= 1.28.0~),
                libpolkit-gobject-1-dev (>= 0.97),
-               libqmi-glib-dev (>= 1.30.8~),
+               libqmi-glib-dev (>= 1.32.0~),
                libsystemd-dev (>= 209),
+               libtool,
+               meson,
+               polkitd,
                python3-dbus,
                python3-gi,
+               udev,
                valac (>= 0.22),
 # Needed for building documentation
                gtk-doc-tools <!nodoc>,
                libglib2.0-doc <!nodoc>,
+# Needed for automated tests
+               dbus <!nocheck>,
 Standards-Version: 4.6.1
 Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/DebianOnMobile-team/modemmanager.git
