--- a/debian/rules
+++ b/debian/rules
@@ -5,29 +5,19 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
-#always exclude any data from version control systems
-DH_ALWAYS_EXCLUDE=.svn:.git:.bzr
-
 %:
-	dh $@ --with gir
+	dh $@ --with gir --buildsystem=meson
 
+# Although meson is the preferred build system, autotools files are still present,
+# leading dh_autoreconf to execute anyway, which is useless.
 override_dh_autoreconf:
-	NOCONFIGURE=true dh_autoreconf ./autogen.sh
-
-override_dh_auto_clean:
-	rm -f gtk-doc.make m4/gtk-doc.m4
-	dh_auto_clean
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		--enable-gtk-doc \
-		--with-polkit=permissive \
-		--enable-more-warnings \
-		--with-suspend-resume=systemd \
-		--with-systemdsystemunitdir=/lib/systemd/system
+		-Dpolkit=permissive \
+		-Dsystemdsystemunitdir=/lib/systemd/system \
+		-Dvapi=true
 
 override_dh_install:
 	rmdir $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/ModemManager/fcc-unlock.d
-	find $(CURDIR)/debian/tmp/ -name \*.a -exec rm {} \;
-	find $(CURDIR)/debian/tmp/ -name \*.la -exec rm {} \;
 	dh_install
