--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,12 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
+ifeq ($(filter libmm-glib-doc,$(shell dh_listpackages)),)
+configure_flags += -Dgtk_doc=false
+else
+configure_flags += -Dgtk_doc=true
+endif
+
 %:
 	dh $@ --with gir --buildsystem=meson
 
@@ -13,7 +19,7 @@ DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 override_dh_autoreconf:
 
 override_dh_auto_configure:
-	dh_auto_configure -- \
+	dh_auto_configure -- $(configure_flags) \
 		-Dpolkit=permissive \
 		-Dsystemdsystemunitdir=/lib/systemd/system \
 		-Dvapi=true
