Add SIM A7600E-H support
- add UDEV rules for SIM A7600E-H
- add SIM card switching using libgpiod.
  Add ID_MM_SIM_SWITCH_GPIO_LABEL UDEV parameter for GPIO controlling external SIM switching
- set all +CRSM response timeouts to 20s
- ignore PB DONE, SMS DONE, +NITZ: URCs
- ignore NO CARRIER after AT+CFUN=0 command
- ignore +CPIN: READY URC on startup
- implement reset
- fix supported ip families request

--- a/debian/control
+++ b/debian/control
@@ -26,6 +26,7 @@ Build-Depends: debhelper-compat (= 13),
                python3-gi,
                udev,
                valac (>= 0.22),
+               libgpiod-dev,
 # Needed for building documentation
                gtk-doc-tools <!nodoc>,
                libglib2.0-doc <!nodoc>,
