Fix SMS sending on SIM A7600E-H
Firmwares staring from B04 have a bug. They require setting character set of mobile equipment to GSM (AT+CSCS="GSM") before sending SMS.

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -781,6 +781,7 @@ if plugins_options['simtech']
     'simtech/mm-broadband-modem-simtech.c',
     'simtech/mm-plugin-simtech.c',
     'simtech/mm-shared-simtech.c',
+    'simtech/mm-sms-simtech-a7600.c',
   )
 
   if enable_qmi
